# qnx_hello_world

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
doc/bazel/: bazel_architecture.puml
doc/qemu/: qnx_filesystem_build.puml
doc/toolchain/: toolchain.puml
qemu/: BUILD  README.md  README_QNX_QEMU_HW.md  clean_qnx_qemu.py  launcher_clean.sh  launcher_run.sh  launcher_stop.sh  run_qnx_qemu.py  stop_qnx_qemu.py
qemu/qnx_qemu/: __init__.py  acceleration.py  config.py  image_builder.py  interfaces.py  logger.py  manager.py  path_resolver.py  process.py  qemu_command.py  ssh.py  vm_workspace.py
src/: BUILD  README.md  main.cpp
tests/: BUILD  README.md
tests/build_features/: BUILD  copts_test.cpp  defines_test.cpp  include_test.cpp
tests/build_features/include/myapi/: myapi.h
tests/cpp_features/: BUILD  cpp17_types.cpp  exceptions.cpp  inheritance.cpp  lambdas.cpp  modern_cpp.cpp  smart_pointers.cpp  templates.cpp
tests/lib_chain/: BUILD  app.cpp  app.h  chain_test.cpp  config.cpp  config.h  logger.cpp  logger.h
tests/lib_header_only/: BUILD  event.hpp  header_only_test.cpp
tests/lib_shared/: BUILD  shared_lib_test.cpp  stringutils.cpp  stringutils.h
tests/lib_static/: BUILD  mathlib.cpp  mathlib.h  static_lib_test.cpp
tests/qnx_specific/: BUILD  qnx_api_test.cpp  timer_pulse_test.cpp
tests/stl_containers/: BUILD  stl_test.cpp
tests/threading/: BUILD  threading_test.cpp
toolchain/: BUILD  README.md  cc_toolchain_config.bzl  qnx_sdk.bzl
