module(name = "hello_world")

# Add platforms for cross-compilation support
bazel_dep(name = "platforms", version = "0.0.11")

# Locate the QNX SDP via environment variables (QNX_ROOT, QNX_TARGET, or QNX_HOST)
qnx_sdk = use_extension("//toolchain:qnx_sdk.bzl", "qnx_sdk")
use_repo(qnx_sdk, "qnx_sdk")

# Register QNX toolchains for all supported architectures
register_toolchains(
    "//toolchain:qnx_x86_64_toolchain",
    "//toolchain:qnx_aarch64_toolchain",
)
